Changes in heading

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,11 +3,11 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Location Product Unique/Primary ID
+appTitle=Mapping Unique/Primary ID's
 
 #YDES: Application description
 appDescription=A Fiori application.
 #XTIT: Main view title
-title=Location Product Unique/Primary ID
+title=Mapping Unique/Primary ID's
 
-flpTitle=Location Product Unique/Primary ID
+flpTitle=Mapping Unique/Primary ID's
