--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,11 +3,11 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Mapping Unique/Primary ID's
+appTitle=Unique ID-Primary ID Mapping
 
 #YDES: Application description
 appDescription=A Fiori application.
 #XTIT: Main view title
-title=Mapping Unique/Primary ID's
+title=Unique ID-Primary ID Mapping
 
-flpTitle=Mapping Unique/Primary ID's
+flpTitle=Unique ID-Primary ID Mapping
