--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -9,5 +9,5 @@ appTitle=Unique ID-Primary ID Mapping
 appDescription=A Fiori application.
 #XTIT: Main view title
 title=Unique ID-Primary ID Mapping
-
+#application
 flpTitle=Unique ID-Primary ID Mapping
